@@ -85,6 +85,18 @@ The :program:`im_client` is called like this::
    ``reconfigure infId``
       Reconfigure the infrastructure with ID ``infId`` and also update the
       configuration data.
+      
+   ``startvm infId vmId``
+      Resume the specified virtual machine ``vmId`` associated to the infrastructure with ID
+      ``infId``, stopped previously by the operation ``stop``.
+
+   ``stopvm infId vmId``
+      Stop (but not remove) the specified virtual machine ``vmId` associated to the infrastructure with ID
+      infrastructure with ID ``infId``.
+      
+   ``sshvm infId vmId``
+      Connect with SSH with the specified virtual machine ``vmId` associated to the infrastructure with ID
+      infrastructure with ID ``infId``.
 
 .. _auth-file:
 
